# tensor-parallel-with-ray

./: .gitignore  pyproject.toml  ray-gpu.ipynb  start-ray-head.py  start-ray-worker.py
llama/: linear.py  llama.py  llama3.py  llama_tp.py  train_llama.ipynb  train_llama.py  train_llama_2.py
