[project]
name = "cdsw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.3",
    "fastapi[standard]==0.128.0",
    "ipywidgets==8.1.8",
    "ray[default]==2.53.0",
    "torch==2.9.1",
    "torchvision==0.24.1",
]
